<resources>
    <string name="app_name">My Implicit Intent</string>
    <string name="txt_btnpagweb">Abrir página web</string>
    <string name="txt_btncallphone">Hacer una llamada</string>
    <string name="txt_btntakepicture">Hacer una foto</string>
    <string name="txt_btnaddalarm">Añadir una alarma</string>
    <string name="txt_btnsendsms">Enviar SMS</string>
    <string name="txt_btnsendemail">Enviar email</string>
    <string name="txt_btntakepicture2">Hacer una foto y recuperarla</string>
    <string name="txt_btnopenmaps">Abrir Maps</string>
</resources>